<resources>
    <string name="app_name">Labaratornaya</string>

    <string name="label_email">E-mail</string>
    <string name="hint_email">Введите ваш email</string>
    <string name="label_password">Пароль</string>
    <string name="hint_password">Введите ваш пароль</string>
    <string name="login_button">Войти</string>
    <string name="error_empty_fields">Пожалуйста, заполните все поля</string>
    <string name="error_auth">Ошибка авторизациdи</string>
    <string name="welcome_message">Вход выполнен: %1$s</string>

    <string name="back_button">Назад</string>
</resources>
